new commit made

--- a/index.html
+++ b/index.html
@@ -7,6 +7,36 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <header class="header">
+    <nav class="nav-bar">
+      <div class="logo">Bater<span>Wallet</span></div>
+      <ul class="nav-item">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Pages</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">Cart</a></li>
+        
+      </ul>
+      <button class="nav-btn">Download App</button>
+    </nav>
+
+    <div class="hero-content">
+      <div class="her-flex-1">
+        <h1>Buy and trade cryptos like never before</h1>
+        <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas id dignissimos laboriosam expedita, aperiam vero corporis corrupti tempora? Dolor modi, nam ea tempore id placeat recusandae quae quibusdam voluptatem? Eos illo molestiae, aliquid culpa accusamus dolores tempore ad maxime quia?</h3>
+        <button>Download app</button>
+        <button>View Pricing</button>
+      </div>
+      <div class="her-flex-2">
+        <img src="images/63b38c1bc0961835c328cc45_image-hero-finantech-x-webflow-template.svg" alt="">
+        <img src="images/63b38c1ad720794d35232038_image-float-1-finantech-x-webflow-template.svg" alt="">
+        <img src="images/63b38c1a196e18d1e6b511fe_image-float-2-finantech-x-webflow-template.svg" alt="">
+        <img src="images/63b38c194632667d805dc61a_image-float-3-finantech-x-webflow-template.svg" alt="">
+      </div>
+    </div>
+  </header>
   
   <script src="script.js"></script>
 </body>
