--- a/index.html
+++ b/index.html
@@ -23,21 +23,67 @@
     </nav>
 
     <div class="hero-content">
-      <div class="her-flex-1">
-        <h1>Buy and trade cryptos like never before</h1>
+      <div class="hero-flex-1">
+        <h1>Trade crypto with unmatched speed and security</h1>
         <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas id dignissimos laboriosam expedita, aperiam vero corporis corrupti tempora? Dolor modi, nam ea tempore id placeat recusandae quae quibusdam voluptatem? Eos illo molestiae, aliquid culpa accusamus dolores tempore ad maxime quia?</h3>
-        <button>Download app</button>
-        <button>View Pricing</button>
+        <button class="green-btn">Download app</button>
+        <button class="black-btn">View Pricing</button>
       </div>
       <div class="her-flex-2">
-        <img src="images/63b38c1bc0961835c328cc45_image-hero-finantech-x-webflow-template.svg" alt="">
-        <img src="images/63b38c1ad720794d35232038_image-float-1-finantech-x-webflow-template.svg" alt="">
-        <img src="images/63b38c1a196e18d1e6b511fe_image-float-2-finantech-x-webflow-template.svg" alt="">
-        <img src="images/63b38c194632667d805dc61a_image-float-3-finantech-x-webflow-template.svg" alt="">
+        <div class="hero-image">
+          <img src="images/63b38c1bc0961835c328cc45_image-hero-finantech-x-webflow-template.svg" alt="">
+        </div>
+        <div class="hero-image-2">
+            <img src="images/63b38c1ad720794d35232038_image-float-1-finantech-x-webflow-template.svg" alt="">
+        </div>
+        <div class="hero-image-3">
+            <img src="images/63b38c1a196e18d1e6b511fe_image-float-2-finantech-x-webflow-template.svg" alt="">
+        </div>
+        
+        <div class="hero-image-4">
+            <img src="images/63b38c194632667d805dc61a_image-float-3-finantech-x-webflow-template.svg" alt="">
+        </div>
+        
+      </div>
+    </div>
+
+    <div class="header-companies">
+      <h2>Supported by many companies <span>around the globe</span></h2>
+      <div class="flex-images">
+        <img src="images/6553ce23bbe02d6bf342ac12_application-logo-finantech-x-webflow-template.svg" alt="">
+        <img src="images/6553ce23d7f9ba40e62aae77_business-logo-finantech-x-webflow-template.svg" alt="">
+        <img src="images/6553ce23e0c08a5950423d9c_agency-logo-finantech-x-webflow-template.svg" alt="">
+        <img src="images/6553ce2329c1b8d762eae93b_company-logo-finantech-x-webflow-template.svg" alt="">
+        <img src="images/6553ce24664ccf02b2d56b3b_organization-logo-finantech-x-webflow-template.svg" alt="">
+        <img src="images/6553ce2376f5cf1e489eb97e_venture-logo-finantech-x-webflow-template.svg" alt="">
       </div>
     </div>
   </header>
   
+
+  <!-- section- furure-crypto-wallet -->
+
+  <section class="crypto-wallet">
+    <div class="crpto-wallet-grid">
+         <div class="crypto-text">
+          <h1>A crypto wallet from the future.</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga culpa incidunt totam rem odit facere officia dolores autem tempora optio.</p>
+          <div class="icon-text">
+            <span>icon</span> <h4>Lowest fees in market</h4>
+            <span>icon</span> <h4>Fast and secure transactions</h4>
+            <span>icon</span> <h4>256-bit secure encryption.</h4>
+          </div>
+          <button class="green-btn">Download app</button>
+
+          <div class="padlock-div">
+            <h3>Bullet-Proof Security by Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis quaerat unde, quia officia fugit iure.</h3>
+            <img src="images/63b48f78a18e75f008cb53ab_thumbnail-5-blog-finantech-x-webflow-template.svg" alt="">
+          </div>
+         </div>
+         <div class="crypto-image"></div>
+    </div>
+   
+  </section>
   <script src="script.js"></script>
 </body>
 </html>
